# ai_finance

./: .gitignore  README.md  package-lock.json  pyproject.toml  test_db.py
backend/: __init__.py  brain_test.py  main.py  pyproject.toml
backend/agents/: __init__.py  base.py
backend/agents/critic/: __init__.py  agent.py  quality_rubric.py
backend/agents/market_analyst/: __init__.py  agent.py  tools.py
backend/agents/news_sentiment/: __init__.py  agent.py  tools.py
backend/agents/personal_cfo/: __init__.py  agent.py  tools.py
backend/agents/portfolio_manager/: __init__.py  agent.py  tools.py
backend/agents/risk_analyst/: __init__.py  agent.py  tools.py
backend/api/: __init__.py  app.py
backend/api/middleware/: __init__.py  auth.py
backend/api/routes/: __init__.py  health.py  memory.py  portfolio.py  query.py  risk.py
backend/api/websockets/: __init__.py  stream.py
backend/app/: __init__.py
backend/app/api/: __init__.py  deps.py
backend/config/: __init__.py  schemas.py  settings.py
backend/database/: __init__.py  connection.py
backend/database/schemas/: __init__.py  init_postgres.py
backend/memory/: __init__.py  memory_manager.py
backend/memory/episodic/: __init__.py  episodic_memory.py
backend/memory/mem0/: __init__.py  long_term_memory.py
backend/memory/pgvector/: __init__.py  semantic_memory.py
backend/memory/redis/: __init__.py  session_memory.py
backend/ml_models/: __init__.py  model_registry.py
backend/ml_models/anomaly/: __init__.py  isolation_forest.py
backend/ml_models/explainability/: __init__.py  shap.py
backend/ml_models/forecasting/: __init__.py  patchtst.py
backend/ml_models/risk/: __init__.py  garch.py
backend/ml_models/sentiment/: __init__.py  finbert.py
backend/mlops/: __init__.py
backend/mlops/monitoring/: __init__.py  drift_detector.py  model_monitor.py
backend/mlops/tracking/: __init__.py  mlflow_tracker.py
backend/mlops/training/: __init__.py  retraining_pipeline.py
backend/portfolio/: __init__.py
backend/portfolio/optimization/: __init__.py  backtester.py  optimizer.py  rebalancer.py
backend/rag/: __init__.py  models.py
backend/services/: __init__.py  agent_factory.py  data_provider.py  graph_state.py  llm_service.py  orchestrator.py  query_router.py  synthesizer.py
backend/utils/: __init__.py  helpers.py  logging.py
(+81 files in other folders)
